--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
                                 </option>
                             </select>
                         </li>
+                        <input type="date">
                     </ul>
                 </div>
             </div>
