--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <title>Home</title>
@@ -36,6 +37,29 @@
         <g>
             <path
                 d="M6.5 0.25C3.05391 0.25 0.25 2.93164 0.25 6.22656C0.25 7.7957 0.965234 9.88242 2.37578 12.4289C3.50859 14.4734 4.81914 16.3223 5.50078 17.2422C5.61596 17.3994 5.76656 17.5272 5.94037 17.6153C6.11418 17.7034 6.3063 17.7493 6.50117 17.7493C6.69604 17.7493 6.88816 17.7034 7.06197 17.6153C7.23578 17.5272 7.38638 17.3994 7.50156 17.2422C8.18203 16.3223 9.49375 14.4734 10.6266 12.4289C12.0348 9.8832 12.75 7.79648 12.75 6.22656C12.75 2.93164 9.94609 0.25 6.5 0.25ZM6.5 9C6.00555 9 5.5222 8.85338 5.11107 8.57867C4.69995 8.30397 4.37952 7.91352 4.1903 7.45671C4.00108 6.99989 3.95157 6.49723 4.04804 6.01227C4.1445 5.52732 4.3826 5.08186 4.73223 4.73223C5.08186 4.3826 5.52732 4.1445 6.01227 4.04804C6.49723 3.95157 6.99989 4.00108 7.45671 4.1903C7.91352 4.37952 8.30397 4.69995 8.57867 5.11107C8.85338 5.5222 9 6.00555 9 6.5C8.99928 7.16282 8.73565 7.79828 8.26697 8.26697C7.79828 8.73565 7.16282 8.99928 6.5 9Z" />
+        </g>
+    </symbol>
+    <symbol id="calendar" viewBox="0 0 21 20">
+        <g>
+            <path
+                d="M18.4167 3.33337H16.6111V4.44449H18.2778V16.6667H2.72222V4.44449H4.38888V3.33337H2.58333C2.45346 3.33554 2.32529 3.36328 2.20614 3.41499C2.08699 3.4667 1.9792 3.54138 1.88892 3.63476C1.79863 3.72814 1.72763 3.83838 1.67996 3.95921C1.6323 4.08003 1.6089 4.20906 1.6111 4.33893V16.7723C1.6089 16.9021 1.6323 17.0312 1.67996 17.152C1.72763 17.2728 1.79863 17.3831 1.88892 17.4764C1.9792 17.5698 2.08699 17.6445 2.20614 17.6962C2.32529 17.7479 2.45346 17.7756 2.58333 17.7778H18.4167C18.5465 17.7756 18.6747 17.7479 18.7938 17.6962C18.913 17.6445 19.0208 17.5698 19.1111 17.4764C19.2014 17.3831 19.2724 17.2728 19.32 17.152C19.3677 17.0312 19.3911 16.9021 19.3889 16.7723V4.33893C19.3911 4.20906 19.3677 4.08003 19.32 3.95921C19.2724 3.83838 19.2014 3.72814 19.1111 3.63476C19.0208 3.54138 18.913 3.4667 18.7938 3.41499C18.6747 3.36328 18.5465 3.33554 18.4167 3.33337Z" />
+            <path d="M4.94446 7.77783H6.05557V8.88894H4.94446V7.77783Z" />
+            <path d="M8.27777 7.77783H9.38888V8.88894H8.27777V7.77783Z" />
+            <path d="M11.6111 7.77783H12.7222V8.88894H11.6111V7.77783Z" />
+            <path d="M14.9445 7.77783H16.0556V8.88894H14.9445V7.77783Z" />
+            <path d="M4.94446 10.5555H6.05557V11.6667H4.94446V10.5555Z" />
+            <path d="M8.27777 10.5555H9.38888V11.6667H8.27777V10.5555Z" />
+            <path d="M11.6111 10.5555H12.7222V11.6667H11.6111V10.5555Z" />
+            <path d="M14.9445 10.5555H16.0556V11.6667H14.9445V10.5555Z" />
+            <path d="M4.94446 13.3334H6.05557V14.4445H4.94446V13.3334Z" />
+            <path d="M8.27777 13.3334H9.38888V14.4445H8.27777V13.3334Z" />
+            <path d="M11.6111 13.3334H12.7222V14.4445H11.6111V13.3334Z" />
+            <path d="M14.9445 13.3334H16.0556V14.4445H14.9445V13.3334Z" />
+            <path
+                d="M6.05556 5.55553C6.2029 5.55553 6.34421 5.497 6.44839 5.39281C6.55258 5.28862 6.61111 5.14732 6.61111 4.99997V1.66664C6.61111 1.5193 6.55258 1.37799 6.44839 1.2738C6.34421 1.16962 6.2029 1.11108 6.05556 1.11108C5.90821 1.11108 5.76691 1.16962 5.66272 1.2738C5.55853 1.37799 5.5 1.5193 5.5 1.66664V4.99997C5.5 5.14732 5.55853 5.28862 5.66272 5.39281C5.76691 5.497 5.90821 5.55553 6.05556 5.55553Z" />
+            <path
+                d="M14.9444 5.55553C15.0918 5.55553 15.2331 5.497 15.3373 5.39281C15.4415 5.28862 15.5 5.14732 15.5 4.99997V1.66664C15.5 1.5193 15.4415 1.37799 15.3373 1.2738C15.2331 1.16962 15.0918 1.11108 14.9444 1.11108C14.7971 1.11108 14.6558 1.16962 14.5516 1.2738C14.4474 1.37799 14.3889 1.5193 14.3889 1.66664V4.99997C14.3889 5.14732 14.4474 5.28862 14.5516 5.39281C14.6558 5.497 14.7971 5.55553 14.9444 5.55553Z" />
+            <path d="M7.72223 3.33337H13.2778V4.44449H7.72223V3.33337Z" />
         </g>
     </symbol>
 </svg>
@@ -403,8 +427,13 @@
                         </li>
                         <li
                             class="actions-header__item item-actions-header item-actions-header_select item-actions-header_select-date">
+                            <span class="item-actions-header__icon">
+                                <svg>
+                                    <use xlink:href="#calendar"></use>
+                                </svg>
+                            </span>
                             <select class="select-date">
-                                <option value="All Venues">
+                                <option value="All Days">
                                     All Days
                                 </option>
                                 <option value="Today">
@@ -423,8 +452,11 @@
                                     Custom Dates
                                 </option>
                             </select>
+
+                            <div class="custom-dates">
+                                <input type="text" id="date-range" placeholder="Select Date Range" />
+                            </div>
                         </li>
-                        <input type="date">
                     </ul>
                 </div>
             </div>
@@ -677,6 +709,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/app.min.js"></script>
 </body>
