--- a/index.html
+++ b/index.html
@@ -2115,18 +2115,26 @@
                         <div class="filter-block__column">
                             <div class="filter-block__filter filter">
                                 <div class="filter__row">
-                                    <a href="" class="filter__btn active">
-                                        SPORTS
-                                    </a>
-                                    <a href="" class="filter__btn">
-                                        CONCERTS
-                                    </a>
-                                    <a href="" class="filter__btn">
-                                        COMEDY
-                                    </a>
-                                    <a href="" class="filter__btn">
-                                        THEATRE
-                                    </a>
+                                    <div class="filter__column">
+                                        <a href="" class="filter__btn active">
+                                            SPORTS
+                                        </a>
+                                    </div>
+                                    <div class="filter__column">
+                                        <a href="" class="filter__btn">
+                                            CONCERTS
+                                        </a>
+                                    </div>
+                                    <div class="filter__column">
+                                        <a href="" class="filter__btn">
+                                            COMEDY
+                                        </a>
+                                    </div>
+                                    <div class="filter__column">
+                                        <a href="" class="filter__btn">
+                                            THEATRE
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -2338,15 +2346,21 @@
                         <div class="filter-block__column">
                             <div class="filter-block__filter filter">
                                 <div class="filter__row">
-                                    <a href="" class="filter__btn active">
-                                        TOP TEAMS
-                                    </a>
-                                    <a href="" class="filter__btn">
-                                        CUPS
-                                    </a>
-                                    <a href="" class="filter__btn">
-                                        LEAGUES
-                                    </a>
+                                    <div class="filter__column">
+                                        <a href="" class="filter__btn active">
+                                            TOP TEAMS
+                                        </a>
+                                    </div>
+                                    <div class="filter__column">
+                                        <a href="" class="filter__btn">
+                                            CUPS
+                                        </a>
+                                    </div>
+                                    <div class="filter__column">
+                                        <a href="" class="filter__btn">
+                                            LEAGUES
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
