--- a/category.html
+++ b/category.html
@@ -2287,9 +2287,9 @@
                 </div>
             </div>
         </section>
-        <section class="sport-tikets">
-            <div class="sport-tikets__container container">
-                <div class="sport-tikets__top-block top-block">
+        <section class="sport-tickets">
+            <div class="sport-tickets__container container">
+                <div class="sport-tickets__top-block top-block">
                     <div class="top-block__row">
                         <div class="top-block__column">
                             <h2 class="top-block__title">Football Tickets</h3>
@@ -2299,123 +2299,131 @@
                         </div>
                     </div>
                 </div>
-                <div class="sport-tikets__body">
-                    <div class="sport-tikets__row">
-                        <div class="sport-tikets__column">
-                            <a href="" class="sport-tikets__btn btn-sport-tikets">
-                                <div class="btn-sport-tikets__image">
-                                    <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                <div class="sport-tickets__body">
+                    <div class="sport-tickets__slider">
+                        <div class="sport-tickets__swiper_1 swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="" class="sport-tickets__btn btn-sport-tickets">
+                                        <div class="btn-sport-tickets__image">
+                                            <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                        </div>
+                                        <div class="btn-sport-tickets__body">
+                                            <div class="btn-sport-tickets__content">
+                                                <div class="btn-sport-tickets__title">UEFA Champions League</div>
+                                                <span class="btn-sport-tickets__subtitle">70 events</span>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                                <div class="btn-sport-tikets__body">
-                                    <div class="btn-sport-tikets__content">
-                                        <div class="btn-sport-tikets__title">UEFA Champions League</div>
-                                        <span class="btn-sport-tikets__subtitle">70 events</span>
-                                    </div>
+                                <div class="swiper-slide">
+                                    <a href="" class="sport-tickets__btn btn-sport-tickets">
+                                        <div class="btn-sport-tickets__image">
+                                            <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                        </div>
+                                        <div class="btn-sport-tickets__body">
+                                            <div class="btn-sport-tickets__content">
+                                                <div class="btn-sport-tickets__title">UEFA Champions League</div>
+                                                <span class="btn-sport-tickets__subtitle">70 events</span>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                            </a>
-                        </div>
-                        <div class="sport-tikets__column">
-                            <a href="" class="sport-tikets__btn btn-sport-tikets">
-                                <div class="btn-sport-tikets__image">
-                                    <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                <div class="swiper-slide">
+                                    <a href="" class="sport-tickets__btn btn-sport-tickets">
+                                        <div class="btn-sport-tickets__image">
+                                            <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                        </div>
+                                        <div class="btn-sport-tickets__body">
+                                            <div class="btn-sport-tickets__content">
+                                                <div class="btn-sport-tickets__title">UEFA Champions League</div>
+                                                <span class="btn-sport-tickets__subtitle">70 events</span>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                                <div class="btn-sport-tikets__body">
-                                    <div class="btn-sport-tikets__content">
-                                        <div class="btn-sport-tikets__title">UEFA Champions League</div>
-                                        <span class="btn-sport-tikets__subtitle">70 events</span>
-                                    </div>
+                                <div class="swiper-slide">
+                                    <a href="" class="sport-tickets__btn btn-sport-tickets">
+                                        <div class="btn-sport-tickets__image">
+                                            <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                        </div>
+                                        <div class="btn-sport-tickets__body">
+                                            <div class="btn-sport-tickets__content">
+                                                <div class="btn-sport-tickets__title">New York Red Bulls</div>
+                                                <span class="btn-sport-tickets__subtitle">70 events</span>
+                                            </div>
+                                            <div class="btn-sport-tickets__like">
+                                                <svg>
+                                                    <use xlink:href="#heart"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                            </a>
-                        </div>
-                        <div class="sport-tikets__column">
-                            <a href="" class="sport-tikets__btn btn-sport-tikets">
-                                <div class="btn-sport-tikets__image">
-                                    <img src="img/sport-tickets/01.jpg" alt="ticket-img">
-                                </div>
-                                <div class="btn-sport-tikets__body">
-                                    <div class="btn-sport-tikets__content">
-                                        <div class="btn-sport-tikets__title">UEFA Champions League</div>
-                                        <span class="btn-sport-tikets__subtitle">70 events</span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="sport-tikets__column">
-                            <a href="" class="sport-tikets__btn btn-sport-tikets">
-                                <div class="btn-sport-tikets__image">
-                                    <img src="img/sport-tickets/01.jpg" alt="ticket-img">
-                                </div>
-                                <div class="btn-sport-tikets__body">
-                                    <div class="btn-sport-tikets__content">
-                                        <div class="btn-sport-tikets__title">New York Red Bulls</div>
-                                        <span class="btn-sport-tikets__subtitle">70 events</span>
-                                    </div>
-                                    <div class="btn-sport-tikets__like">
-                                        <svg>
-                                            <use xlink:href="#heart"></use>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </a>
+                            </div>
                         </div>
                     </div>
-                    <div class="sport-tikets__row">
-                        <div class="sport-tikets__column">
-                            <a href="" class="sport-tikets__btn btn-sport-tikets">
-                                <div class="btn-sport-tikets__image">
-                                    <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                    <div class="sport-tickets__slider">
+                        <div class="sport-tickets__swiper_2 swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="" class="sport-tickets__btn btn-sport-tickets">
+                                        <div class="btn-sport-tickets__image">
+                                            <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                        </div>
+                                        <div class="btn-sport-tickets__body">
+                                            <div class="btn-sport-tickets__content">
+                                                <div class="btn-sport-tickets__title">Spanish La Liga</div>
+                                                <span class="btn-sport-tickets__subtitle">70 events</span>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                                <div class="btn-sport-tikets__body">
-                                    <div class="btn-sport-tikets__content">
-                                        <div class="btn-sport-tikets__title">Spanish La Liga</div>
-                                        <span class="btn-sport-tikets__subtitle">70 events</span>
-                                    </div>
+                                <div class="swiper-slide">
+                                    <a href="" class="sport-tickets__btn btn-sport-tickets">
+                                        <div class="btn-sport-tickets__image">
+                                            <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                        </div>
+                                        <div class="btn-sport-tickets__body">
+                                            <div class="btn-sport-tickets__content">
+                                                <div class="btn-sport-tickets__title">Spanish La Liga</div>
+                                                <span class="btn-sport-tickets__subtitle">70 events</span>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                            </a>
-                        </div>
-                        <div class="sport-tikets__column">
-                            <a href="" class="sport-tikets__btn btn-sport-tikets">
-                                <div class="btn-sport-tikets__image">
-                                    <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                <div class="swiper-slide">
+                                    <a href="" class="sport-tickets__btn btn-sport-tickets">
+                                        <div class="btn-sport-tickets__image">
+                                            <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                        </div>
+                                        <div class="btn-sport-tickets__body">
+                                            <div class="btn-sport-tickets__content">
+                                                <div class="btn-sport-tickets__title">Spanish La Liga</div>
+                                                <span class="btn-sport-tickets__subtitle">70 events</span>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                                <div class="btn-sport-tikets__body">
-                                    <div class="btn-sport-tikets__content">
-                                        <div class="btn-sport-tikets__title">Spanish La Liga</div>
-                                        <span class="btn-sport-tikets__subtitle">70 events</span>
-                                    </div>
+                                <div class="swiper-slide">
+                                    <a href="" class="sport-tickets__btn btn-sport-tickets">
+                                        <div class="btn-sport-tickets__image">
+                                            <img src="img/sport-tickets/01.jpg" alt="ticket-img">
+                                        </div>
+                                        <div class="btn-sport-tickets__body">
+                                            <div class="btn-sport-tickets__content">
+                                                <div class="btn-sport-tickets__title">Spanish La Liga</div>
+                                                <span class="btn-sport-tickets__subtitle">70 events</span>
+                                            </div>
+                                            <div class="btn-sport-tickets__like">
+                                                <svg>
+                                                    <use xlink:href="#heart"></use>
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                            </a>
-                        </div>
-                        <div class="sport-tikets__column">
-                            <a href="" class="sport-tikets__btn btn-sport-tikets">
-                                <div class="btn-sport-tikets__image">
-                                    <img src="img/sport-tickets/01.jpg" alt="ticket-img">
-                                </div>
-                                <div class="btn-sport-tikets__body">
-                                    <div class="btn-sport-tikets__content">
-                                        <div class="btn-sport-tikets__title">Spanish La Liga</div>
-                                        <span class="btn-sport-tikets__subtitle">70 events</span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="sport-tikets__column">
-                            <a href="" class="sport-tikets__btn btn-sport-tikets">
-                                <div class="btn-sport-tikets__image">
-                                    <img src="img/sport-tickets/01.jpg" alt="ticket-img">
-                                </div>
-                                <div class="btn-sport-tikets__body">
-                                    <div class="btn-sport-tikets__content">
-                                        <div class="btn-sport-tikets__title">Spanish La Liga</div>
-                                        <span class="btn-sport-tikets__subtitle">70 events</span>
-                                    </div>
-                                    <div class="btn-sport-tikets__like">
-                                        <svg>
-                                            <use xlink:href="#heart"></use>
-                                        </svg>
-                                    </div>
-                                </div>
-                            </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -3101,6 +3109,12 @@
         <g>
             <path
                 d="M9.06523 14.6235L8.97548 14.7133L8.87675 14.6235C4.6134 10.7551 1.7951 8.19708 1.7951 5.60317C1.7951 3.80807 3.14142 2.46175 4.93651 2.46175C6.31874 2.46175 7.66506 3.3593 8.14076 4.57996H9.8102C10.2859 3.3593 11.6322 2.46175 13.0144 2.46175C14.8095 2.46175 16.1559 3.80807 16.1559 5.60317C16.1559 8.19708 13.3376 10.7551 9.06523 14.6235ZM13.0144 0.666656C11.4527 0.666656 9.9538 1.39367 8.97548 2.53356C7.99715 1.39367 6.49824 0.666656 4.93651 0.666656C2.17207 0.666656 0 2.82975 0 5.60317C0 8.98692 3.05166 11.7603 7.67403 15.9519L8.97548 17.1367L10.2769 15.9519C14.8993 11.7603 17.951 8.98692 17.951 5.60317C17.951 2.82975 15.7789 0.666656 13.0144 0.666656Z" />
+        </g>
+    </symbol>
+    <symbol id="spread" viewBox="0 0 18 21">
+        <g>
+            <path
+                d="M15 20.5C14.1667 20.5 13.4583 20.2083 12.875 19.625C12.2917 19.0417 12 18.3333 12 17.5C12 17.3833 12.0083 17.2623 12.025 17.137C12.0417 17.0117 12.0667 16.8993 12.1 16.8L5.05 12.7C4.76667 12.95 4.45 13.146 4.1 13.288C3.75 13.43 3.38333 13.5007 3 13.5C2.16667 13.5 1.45833 13.2083 0.875 12.625C0.291667 12.0417 0 11.3333 0 10.5C0 9.66667 0.291667 8.95833 0.875 8.375C1.45833 7.79167 2.16667 7.5 3 7.5C3.38333 7.5 3.75 7.571 4.1 7.713C4.45 7.855 4.76667 8.05067 5.05 8.3L12.1 4.2C12.0667 4.1 12.0417 3.98767 12.025 3.863C12.0083 3.73833 12 3.61733 12 3.5C12 2.66667 12.2917 1.95833 12.875 1.375C13.4583 0.791667 14.1667 0.5 15 0.5C15.8333 0.5 16.5417 0.791667 17.125 1.375C17.7083 1.95833 18 2.66667 18 3.5C18 4.33333 17.7083 5.04167 17.125 5.625C16.5417 6.20833 15.8333 6.5 15 6.5C14.6167 6.5 14.25 6.42933 13.9 6.288C13.55 6.14667 13.2333 5.95067 12.95 5.7L5.9 9.8C5.93333 9.9 5.95833 10.0127 5.975 10.138C5.99167 10.2633 6 10.384 6 10.5C6 10.6167 5.99167 10.7377 5.975 10.863C5.95833 10.9883 5.93333 11.1007 5.9 11.2L12.95 15.3C13.2333 15.05 13.55 14.8543 13.9 14.713C14.25 14.5717 14.6167 14.5007 15 14.5C15.8333 14.5 16.5417 14.7917 17.125 15.375C17.7083 15.9583 18 16.6667 18 17.5C18 18.3333 17.7083 19.0417 17.125 19.625C16.5417 20.2083 15.8333 20.5 15 20.5ZM15 4.5C15.2833 4.5 15.521 4.40433 15.713 4.213C15.905 4.02167 16.0007 3.784 16 3.5C16 3.21667 15.904 2.97933 15.712 2.788C15.52 2.59667 15.2827 2.50067 15 2.5C14.7167 2.5 14.4793 2.596 14.288 2.788C14.0967 2.98 14.0007 3.21733 14 3.5C14 3.78333 14.096 4.021 14.288 4.213C14.48 4.405 14.7173 4.50067 15 4.5ZM3 11.5C3.28333 11.5 3.521 11.404 3.713 11.212C3.905 11.02 4.00067 10.7827 4 10.5C4 10.2167 3.904 9.97933 3.712 9.788C3.52 9.59667 3.28267 9.50067 3 9.5C2.71667 9.5 2.47933 9.596 2.288 9.788C2.09667 9.98 2.00067 10.2173 2 10.5C2 10.7833 2.096 11.021 2.288 11.213C2.48 11.405 2.71733 11.5007 3 11.5ZM15 18.5C15.2833 18.5 15.521 18.404 15.713 18.212C15.905 18.02 16.0007 17.7827 16 17.5C16 17.2167 15.904 16.9793 15.712 16.788C15.52 16.5967 15.2827 16.5007 15 16.5C14.7167 16.5 14.4793 16.596 14.288 16.788C14.0967 16.98 14.0007 17.2173 14 17.5C14 17.7833 14.096 18.021 14.288 18.213C14.48 18.405 14.7173 18.5007 15 18.5Z" />
         </g>
     </symbol>
 </svg>
